# ddb-ops-f042ca

./: .gitignore  README.md  cli.py  pyproject.toml  pytest.ini
config/: logger.py
models/: phone_number_capability.py
src/ddb_ops/: __init__.py  constants.py  test-script.py  types.py
src/ddb_ops/models/: __init__.py  phone_number_capability.py
src/ddb_ops/services/: data_service.py
src/ddb_ops/tasks/: create-table.py  create_table.py  delete-numbers.py  deleting.py  read-items.py  reading.py  seed.py
tasks/: delete-numbers.py  read-items.py  seed.py
tests/: conftest.py  test_model.py
